<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_line"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hit.edu.cn.buscoming.Activity.LineActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-25dp"
        tools:layout_editor_absoluteY="-1dp">

        <TextView
            android:text="@string/cityinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputcitytext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:text=" "
            android:ems="10"
            android:id="@+id/inputcity"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main5"
            app:layout_constraintTop_toTopOf="@+id/activity_main5" />

        <TextView
            android:text="@string/lineinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputlinetext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/inputline" />

        <Button
            android:text="@string/lineserachbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linesearch" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linesearchresult"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fab_labelStyle="@style/menu_labels_style"
            app:fab_labelsPosition="left"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="28dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="9dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/linesea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_icon="@drawable/linesea"
                android:onClick="star_content"
                app:fab_title="@string/star_content"/>
        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

