<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="hit.edu.cn.buscoming.Activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@android:drawable/ic_input_add" />-->

    <!--<include layout="@layout/content_main" />-->

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fab_labelStyle="@style/menu_labels_style"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/linesea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/linesea"
            android:onClick="fabline"
            app:fab_title="@string/linetext"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/stopsea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fabstop"
            app:fab_icon="@drawable/stoppic"
            app:fab_title="@string/stoptext"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/dessea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fabdes"
            app:fab_icon="@drawable/despic"
            app:fab_title="@string/destext"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
